@@ -30,3 +30,14 @@ def function6(value = GLOBAL_SET):
     """set is mutable and dangerous."""
     print value
 
+def function7(value = dict()):
+    """dict is mutable and dangerous."""
+    print value
+
+def function8(value = {1}):
+    """set is mutable and dangerous."""
+    print value
+
+def function9(value = list()):
+    """list is mutable and dangerous."""
+    print value
